--- a/packages/theme-default/components/select.less
+++ b/packages/theme-default/components/select.less
@@ -41,7 +41,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    z-index: 99;
+    z-index: 999;
     padding: 5px 0;
     border: 1px solid #dddee1;
     max-height: 300px;
